--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>테스트</title>
 </head>
 <body>
-	<h1 id="id">이름은 : </h1>
-	<script type="text/javascript" src="test.js"></script>
+	<script type="text/javascript" src="re.js"></script>
 </body>
 </html>
